uclibc: updated upstream buildsystem and docs
This commit contains the upstream buildsystem changes. They are
squashed together because the upstream buildsystem is not used for L4Re.

buildsys: fix IS_IN_lib* for out-of-tree builds
buildsys: create linker script with proper flags
nptl: fix exclusion of pthread_setconcurrency.c
buildsys: fix IS_IN_lib* for .i
buildsys: fix IS_IN_lib* for .s
buildsys: tweak ucontext_i.h prerequisites
buildsys: Do not build crt upon pregen
buildsys: link libgcc_eh if DODEBUG
buildsys: Fix setting LIBGCC
Revert "librt: Use -nodefaultlibs instead of -nostdlib"
buildsys: pass -O to ld unless DODEBUG
librt: Fix librt.so depends for !NPTL
librt: Rephrase librt.so library dependencies
include/: ignore sys/random.h symlink
librt: honour HAS_STUBS in buildsys
librt: Refine LIBS
buildsys: try to merge all constants
buildsys: pregen depends on xlocale
buildsys: Tweak pregen wrt headers_dep
buildsys: LT{,.old} CRT prereq
buildsys: swap V=1 with V=2 command printing
buildsys: pregen depends on xlocale
extra: add clang flags for gen_bits_syscall_h

Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

Update MIPS configuration rules.

Signed-off-by: Steve Ellcey <sellcey@imgtec.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

Makefile.in: add missing dependency on bits/sysnum.h to $(pregen-headers-y)
NPTL: fix CFLAGS for cancellation points

Signed-off-by: Max Filippov <jcmvbkbc@gmail.com>

atexit_old: Do not add it to shared libc
nptl/arm: Move aeabi_read_tp to uclibc_nonshared.a
librt: Use -nodefaultlibs instead of -nostdlib

Signed-off-by: Khem Raj <raj.khem@gmail.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

mips: remove ISA choice

Reported-By: Bryan Hundven <bryanhundven@gmail.com>
--

Avoid unnecessary rebuilds due to compiler flag changes

Signed-off-by: Leonid Lisovskiy <lly.dev@gmail.com>
Signed-off-by: Waldemar Brodkorb <wbx@uclibc-ng.org>

--

confdata: fix invalid write
Signed-off

--- a/uclibc/lib/contrib/uclibc/INSTALL
+++ b/uclibc/lib/contrib/uclibc/INSTALL
@@ -73,6 +73,9 @@ USING uClibc-ng:
     (i.e. binutils, gcc and uClibc-ng) that was built expressly for use
     with uClibc-ng.
 
- - You have two choices at the moment:
+ - You have following choices at the moment:
    - Use OpenADK from http://www.openadk.org
+   - Use Buildroot from http://www.buildroot.org
+   - Use OpenWrt from http://www.openwrt.org
+   - Use Crosstool-NG from http://crosstool-ng.org
    - Use your own build scripts or environment
